--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2021 15:37:25").getTime();
+var countDownDate = new Date("Feb 5, 2020 15:37:25").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -27,7 +27,7 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  document.getElementById("demo").innerHTML = "Live In "+days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
 
   // If the count down is finished, write some text
