--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='["Machine Learning","Software Development.", "Game Developemt."Computer Vision."]'></span>
+								     data-rotate='["Machine Learning","Software Development.", "Game Developemt.","Computer Vision."]'></span>
 								</h2>
 							</div>
             </div>
