--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-	        </ul>
+			  <li class="nav-item"><a href="#motivation-section" class="nav-link"><span>Motivation</span></a></li>
+	          
+			</ul>
 	      </div>
 	    </div>
 	  </nav>
@@ -850,7 +851,24 @@
 	            </div>
 	          </div>
           </div>
-        </div>
+		</div>
+		
+		<section class="ftco-section contact-section ftco-no-pb" id="motivation-section">
+			<div class="container">
+				<div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-7 heading-section text-center ftco-animate">
+				  <h1 class="big big-2">Motivation</h1>
+				  <h2 class="mb-4">Motivation</h2>
+				  <p>This are the ideas that keeps me awake at night.</p>
+				</div>
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/AR-86T8jpuQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+				</div>
+			  </div>
+	  
+			  
+			</div>
+	</section>
 
         <div class="row no-gutters block-9">
           <!-- <div class="col-md-6 order-md-last d-flex">
