added some features

--- a/index.html
+++ b/index.html
@@ -110,29 +110,31 @@
 	        </div>
         </div>
     	</div>
-    </section>
+	</section>
+	
+	
 
-    <!-- <section class="ftco-section ftco-partner">
+    <section class="ftco-section ftco-partner">
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="https://www.linkedin.com/in/israel-abebe/"  target="_blank"  class="partner"><img src="images/linkdin.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-2.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="https://stackoverflow.com/users/4409660/israel-abebe"  target="_blank"  class="partner"><img src="images/so.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-3.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="https://twitter.com/Israel_Abebe"  target="_blank"  class="partner"><img src="images/twitter.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-4.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="https://www.instagram.com/israel.abebe/"  target="_blank"  class="partner"><img src="images/insta.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-5.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="images/skype.png"  target="_blank"  class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     		</div>
     	</div>
-    </section> -->
+    </section>
 
     <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
     	<div class="container">
@@ -184,26 +186,17 @@
 		    					<h2>Applied ML Developer , Project Manager</h2>
 								<span class="position">SingularityNet,Icog-Labs Software Consultancy</span>
 								<p>Worked at Ethiopians first AI Research and Software Development company.</p>
-								<!-- <br>
+								<br>
 		    					<ul>
-									<li><b><a href="https://github.com/IsraelAbebe/Image-retrieval-in-pytorch">IMAGE RETRIEVAL NETWORK:</a></b> Researched, implemented and deployed an
-										image retrieval network on google open images dataset for SingularityNet.</li>
-									<li><b><a href="https://github.com/singnet/holistic-edge-detection-service">Holistically-Nested Edge Detection:</a></b>Tested and integrated a pre-implemented
-										heuristics edge detection model for SingularityNet.</li> 
-									<li><b>PEOPLE ANALYTICS SERVICE:</b>Given organizational slack messages, we visu-
-										alized and tried to predict different relationships and personal interests.</li> 
-									<li><b><a href="https://github.com/singnet/network-analytics-services">NETWORK ANALYTICS SERVICE:</a></b>Implemented API for different graph anal-
-										ysis functions to be used for other projects.</li>
-									<li><b><a href="https://github.com/IsraelAbebe/plant_disease_experiments">PLANT DISEASE RECOGNITION FROM LEAF IMAGE:</a></b>Lead a team and in-
-										volved in the implementation of plant disease recognition model with 99%
-										accuracy. Tried using GANs to generate better quality training data.</li> 
-									<li><b>SEMANTIC VISION EXPERIMENTS: </b>Experimented with different Generative
-										Adversarial Network variants and evaluating them.</li>
-									<li><b><a href="https://github.com/IsraelAbebe/age-and-gender-networks">AGE AND GENDER RECOGNITION:</a> </b>Implemented an age and gender recog-
-										nition network with 78% and 83% accuracy.</li>
-									<li><b>Intern Mentor:</b>Guided,mentored,motivated and Worked with interns on
-										different projects.</li> 
-								</ul>  -->
+									<li><b>IMAGE RETRIEVAL NETWORK</b></li>
+									<li><b>Holistically-Nested Edge Detection</a></b></li> 
+									<li><b>PEOPLE ANALYTICS SERVICE</b></li> 
+									<li><b>NETWORK ANALYTICS SERVICE:</b></li>
+									<li><b>PLANT DISEASE RECOGNITION FROM LEAF IMAGE</b></li> 
+									<li><b>SEMANTIC VISION EXPERIMENTS</b></li>
+									<li><b>AGE AND GENDER RECOGNITION </b></li>
+									<li><b>Intern Mentor</b></li> 
+								</ul> 
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -213,8 +206,11 @@
 					    	<div class="text pl-3">
 		    					<span class="date">2015-2017</span>
 		    					<h2>Internship - Junior Developer</h2>
-		    					<span class="position">Icog-Labs Software Consultancy</span>
-		    					<p><a href="https://www.indiegogo.com/projects/yanetu-ai-teaching-tablet-for-african-children--3#/">YaNetu: AI Teaching Tablet for African Children.</a></p>
+								<span class="position">Icog-Labs Software Consultancy</span>
+								<ul>
+									<li><b><a href="https://www.indiegogo.com/projects/yanetu-ai-teaching-tablet-for-african-children--3#/">YaNetu: AI Teaching Tablet for African Children.</a></b></li>
+								</ul> 
+		    					<p></p>
 		    				</div>
 	    				</div>
 	    				
@@ -614,7 +610,9 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">My Projects</h2>
-            <p>Teaching myself one project at a time.</p>
+			<p>Teaching myself one project at a time.</p>
+			<p>---</p>
+            <p>Featured Projects.</p>
           </div>
         </div>
     		<div class="row no-gutters">
@@ -722,8 +720,9 @@
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Blog</h2>
-            <p>Working on it</p>
+            <h2 class="mb-4">My Blog</h2>
+			<p>Working on it! Enjoy my twitter Feed</p>
+			<a class="twitter-timeline" data-width="400" data-height="400" href="https://twitter.com/Israel_Abebe?ref_src=twsrc%5Etfw">Tweets by Israel_Abebe</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
         <!-- <div class="row d-flex">
