--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
+			  <li><a href="https://twitter.com/Israel_Abebe?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Israel_Abebe</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
@@ -61,7 +62,8 @@
 								     data-rotate='["Machine Learning","Software Development.", "Game Developemt.","Computer Vision."]'></span>
 								</h2>
 							</div>
-            </div>
+			</div>
+			
           </div>
         </div>
       </div>
