--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
     				<a href="https://www.linkedin.com/in/israel-abebe/"  target="_blank"  class="partner"><img src="images/linkdin.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
+    				<a href="https://github.com/israelAbebe"  target="_blank"  class="partner"><img src="images/github.png" class="img-fluid" alt="Colorlib Template"></a>
+				</div>
+				<div class="col-sm ftco-animate">
     				<a href="https://stackoverflow.com/users/4409660/israel-abebe"  target="_blank"  class="partner"><img src="images/so.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
@@ -669,15 +672,16 @@
 	    				</div>
     				</div>
     			</div>
-    			<!-- <div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
-    					<div class="overlay"></div>
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/alphabeths.jpg);">
+						<div class="overlay"></div>
+						
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
+	    					<h3><a href="https://github.com/IsraelAbebe/Amharic-NLP">Amharic NLP</a></h3>
+	    					<span>Natural Language Processing</span>
+						</div>
     				</div>
-    			</div> -->
+    			</div>
     			<!-- <div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
     					<div class="overlay"></div>
