--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A Software Developer With eye for design and pattern.</p>
+					<p>Hello, Welcome</p>
+					<p>I am a Software Developer interested in Applied Machine Learning and Game development. I spend most of my time teaching myself things I am fascinated by. I love taking online courses in machine learning, game development, video, and photo editing and related subjects.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Israel Abebe</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 19,1993</span></li>
