--- a/index.html
+++ b/index.html
@@ -697,10 +697,10 @@
     				</div>
     			</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Cassava.jpeg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cassava.jpeg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://github.com/IsraelAbebe/cassava_disease_classification">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="https://github.com/IsraelAbebe/cassava_disease_classification">Cassava Disease Classification</a></h3>
 							<span>Cassava Disease ClassificationWeb Design</span>
 	    				</div>
     				</div>
