--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://github.com/IsraelAbebe/cassava_disease_classification">Cassava Disease Classification</a></h3>
-							<span>Cassava Disease ClassificationWeb Design</span>
+							<span>Computer Vison</span>
 	    				</div>
     				</div>
     			</div>
