--- a/index.html
+++ b/index.html
@@ -654,7 +654,9 @@
             <h2 class="mb-4">My Projects</h2>
 			<p>Teaching myself one project at a time.</p>
 			<p>---</p>
-            <p>Featured Projects.</p>
+			<p>Featured Projects.</p>
+			<img src="http://ghchart.rshah.org/IsraelAbebe" alt="2016rshah's Github chart" />
+            
           </div>
         </div>
     		<div class="row no-gutters">
