--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='["Machine Learning","Software Development.", "Game Developemt.","Computer Vision."]'></span>
+								     data-rotate='["Machine Learning","Software Development.", "Multimodal Learning.","Game Developemt."]'></span>
 								</h2>
 							</div>
             </div>
@@ -102,11 +102,12 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 					<p>Hello, Welcome</p>
-					<p>I am a Software Developer interested in Applied Machine Learning and Game development. I spend most of my time teaching myself things I am fascinated by. I love taking online courses in machine learning, game development, video, and photo editing and related subjects.</p>
+					<p>I am a Software Developer interested in Applied Machine Learning and Multimodal Learning.
+						 I spend most of my time teaching myself things I am fascinated by.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Israel Abebe</span></li>
+		            	<li class="d-flex"><span>Full Name:</span> <span>Israel Abebe Azime</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 19,1993</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Ghana Accra</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Addis Ababa, Ethiopia</span></li>
 		            	<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
 		            	<li class="d-flex"><span>Email:</span> <span>iazime@aimsammi.org, se.israel.abebe@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+233-504316318, +2519-13406256</span></li>
@@ -115,11 +116,11 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
+              	<!-- <p class="mb-4">
 	                <span class="number" data-number="12">0</span>
 	                <span>Projects complete</span>
-                </p>
-                <p><a href="https://drive.google.com/file/d/1IPWOrwzZ8XfWK8cm5Kz5h6XCAfd47M0R/view?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                </p> -->
+                <p><a href="https://drive.google.com/file/d/1YNbAO0wco2UxWdjMaa2bZFT6g_c7A0IS/view?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -176,14 +177,14 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2019-2020</span>
-		    					<h2>AFRICAN MASTERS IN MACHINE INTELLIGENCE (AMMI)</h2>
+		    					<h2>MSC MATHEMATICAL SCIENCES – MACHINE INTELLIGENCE</h2>
 		    					<span class="position">AFRICAN INSTITUTE FOR MATHEMATICAL SCIENCES (AIMS)</span>
 		    					<p>Recipient of the Facebook &amp; Google scholarship..</p>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
+					    		<span class="gb-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2012-2017</span>
@@ -200,7 +201,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2017-2019</span>
+		    					<span class="date">2017-present</span>
 		    					<h2>Applied ML Developer , Project Manager</h2>
 								<span class="position">SingularityNet,Icog-Labs Software Consultancy</span>
 								<p>Worked at Ethiopians first AI Research and Software Development company.</p>
@@ -397,7 +398,143 @@
 								</div>
 					  	</div>
 					  </div>
-					  <div id="page-4" class= "page four">
+					  <div id="page-3" class= "page three">
+						<h2 class="heading">Certificates</h2>
+						</div>
+					      <!--Carousel Wrapper-->
+						<div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+							<!--Indicators-->
+							<ol class="carousel-indicators">
+							<li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-example-2" data-slide-to="1"></li>
+							<li data-target="#carousel-example-2" data-slide-to="2"></li>
+							</ol>
+							<!--/.Indicators-->
+							<!--Slides-->
+							<div class="carousel-inner" role="listbox">
+							<div class="carousel-item active">
+								<div class="view">
+								<img class="d-block w-100" src="images/deep-learning.png"
+									alt="Deep Learning">
+								<div class="mask rgba-black-light"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">Deep Learning</h3>
+								<p><a href="coursera.org/verify/specialization/6AJ9N8HCK2R5">Link</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/tensorflow.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">tensorflow</h3>
+								<p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/tensorflow.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">tensorflow</h3>
+								<p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/tensorflow.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">tensorflow</h3>
+								<p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/game.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">Gamification</h3>
+								<!-- <p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/html_css.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">HTML/CSS</h3>
+								<!-- <p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/maths.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">Mathematics</h3>
+								<!-- <p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/princple.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">Principle of Game Design</h3>
+								<!-- <p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
+								<img class="d-block w-100" src="images/softw.png"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">Software Process and Agile Practices</h3>
+								<!-- <p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							</div>
+							</div>
+							<!--/.Slides-->
+							<!--Controls-->
+							<a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+							</a>
+							
+							<!--/.Controls-->
+						</div>
+					  <!-- <div id="page-4" class= "page four">
 					    <h2 class="heading">Certifications</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
 							<a href="https://photos.google.com/share/AF1QipNEPC5CPTrftpSKNRZuea5osEMGCu5a7rAEhJTntwA6t31dI4m93-LP4GPmdO8bQg?key=LUtKM21BVVU3MWdibzdJMDBldEptWEVtQ2tuU2Jn">
@@ -559,7 +696,7 @@
 							</div>
 	    				</div>
 					  </div>
-					</div>
+					</div> -->
 			  </div>
     	</div>
     </section>
