--- a/index.html
+++ b/index.html
@@ -426,6 +426,18 @@
 							<div class="carousel-item">
 								<!--Mask color-->
 								<div class="view">
+								<img class="d-block w-100" src="images/award.jpg"
+									alt="Second slide">
+								<div class="mask rgba-black-strong"></div>
+								</div>
+								<div class="carousel-caption">
+								<h3 class="h3-responsive">certeficate</h3>
+<!-- 								<p><a href="coursera.org/verify/RKKQ5F3P9TTK">Link</a></p> -->
+								</div>
+							</div>
+							<div class="carousel-item">
+								<!--Mask color-->
+								<div class="view">
 								<img class="d-block w-100" src="images/tensorflow.png"
 									alt="Second slide">
 								<div class="mask rgba-black-strong"></div>
