--- a/index.html
+++ b/index.html
@@ -810,6 +810,20 @@
         </div>
     		<div class="row no-gutters">
     			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(https://user-images.githubusercontent.com/15804692/110856042-2f166900-82c8-11eb-920c-d02a8b6d9c14.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://github.com/IsraelAbebe/An-Amharic-News-Text-classification-Dataset">An-Amharic-News-Text-classification-Dataset</a></h3>
+	    					<span>Reserch NLP</span>
+	    				</div>
+    				</div>
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/alphabeths.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://github.com/IsraelAbebe/plant_disease_experiments">Amharic Online Handwriting Recognition</a></h3>
+	    					<span>Reserch CV</span>
+	    				</div>
+    				</div>
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/plant.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
