--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
           </div>
         </div>
     		<div class="row no-gutters">
-    			<div class="col-md-4">
+    			   <div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(https://user-images.githubusercontent.com/15804692/110856042-2f166900-82c8-11eb-920c-d02a8b6d9c14.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -824,6 +824,8 @@
 	    					<span>Reserch CV</span>
 	    				</div>
     				</div>
+			   </div>
+			     <div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/plant.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
