--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='["Machine Learning","Software Development.", "Multimodal Learning.","Game Developemt."]'></span>
+								     data-rotate='["Machine Learning","Software Development.", "Multimodal Learning.","Deep Learning."]'></span>
 								</h2>
 							</div>
             </div>
@@ -102,25 +102,24 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 					<p>Hello, Welcome</p>
-					<p>I am a Software Developer interested in Applied Machine Learning and Multimodal Learning.
-						 I spend most of my time teaching myself things I am fascinated by.</p>
+					<p>I am a Machine learning Engineer interested in Mulimodal Learning, NLP and real world applications of deep-learning.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Full Name:</span> <span>Israel Abebe Azime</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 19,1993</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Addis Ababa, Ethiopia</span></li>
 		            	<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
 		            	<li class="d-flex"><span>Email:</span> <span>iazime@aimsammi.org, se.israel.abebe@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+233-504316318, +2519-13406256</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span> +2519-13406256 , +233-504316318</span></li>
 		            </ul>
 		          </div>
 		        </div>
-	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
+	          <div class="counter-wrap ftco-animate d-flex mt-md-3"></div>
               <div class="text">
               	<!-- <p class="mb-4">
 	                <span class="number" data-number="12">0</span>
 	                <span>Projects complete</span>
                 </p> -->
-                <p><a href="https://drive.google.com/file/d/1YNbAO0wco2UxWdjMaa2bZFT6g_c7A0IS/view?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="https://drive.google.com/file/d/1rKo0NwjDSie_XBkxo98P2cxXzjXCpt8o/view?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -200,9 +199,24 @@
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
+							<div class="text pl-3">
+		    					<span class="date">2021-present</span>
+		    					<h2>Applied Research Data Scientist</h2>
+								<span class="position">Iquartic.inc , Newwave</span>
+								<br>
+		    					<ul>
+									<li><b>MulimodalLearning,GraphNeuralNetworkandapplicationinhealthcare.</b></li>
+									<li><b>ComputerVision,NLPandGenerativeNetworkApplicationsforseveralproducts.</a></b></li> 
+								</ul> 
+		    				</div>
+	    				</div>
+						<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2017-present</span>
-		    					<h2>Applied ML Developer , Project Manager</h2>
+		    					<h2>Applied ML Developer</h2>
 								<span class="position">SingularityNet,Icog-Labs Software Consultancy</span>
 								<p>Worked at Ethiopians first AI Research and Software Development company.</p>
 								<br>
